--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "python.pythonPath": "/usr/bin/python3",
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 1000,
+    "editor.multiCursorModifier": "alt",
+    "editor.renderWhitespace": "boundary",
     "python.autoComplete.addBrackets": true,
     "python.autoComplete.showAdvancedMembers": true,
     "python.globalModuleInstallation": true
